Add updateUserPic service
